# i2c-scanner-rs

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config.toml
src/: main.rs
