[package]
authors = ["Tom Brzyzek <tbrzyzek@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "i2c-scanner"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
nb = "1"

[dependencies.stm32f4xx-hal]
version = "0.19.0"
features = ["stm32f446"] 

# [dependencies.stm32f4]
# version = "0.15.1"
# features = ["stm32f446", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "i2c-scanner"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
